# Kattis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  input.txt  main.cpp
competitive_problems/: a_one_paper.cpp  a_one_paper.h  alice_bob.cpp  alice_bob.h  dice_game.cpp  dice_game.h  one_dim_frog.cpp  one_dim_frog.h  ten_kind_people2.cpp  ten_kind_people2.h  ten_kinds_of_people.cpp  ten_kinds_of_people.h  three_dim_printed_statues.cpp  three_dim_printed_statues.h  two_zero_four_eight.cpp  two_zero_four_eight.h  weak_vertices.cpp  weak_vertices.h
